--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width">
-	  <title>My Dog</title>
-	  <link href="style.css" rel="stylesheet" type="text/css" />
+	  	<meta charset="utf-8">
+	      	<meta name="viewport" content="width=device-width">
+	      	<title>My Dog</title>
+		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>	
 		<h1>My Dog</h1>
-		<p>My dog's name is <a href="https://www.britannica.com/topic/Zeus"><strong>Zeus</strong></a>. He is named after a <em>Greek god</em>. 
+		<p>
+			My dog's name is <a href="https://www.britannica.com/topic/Zeus"><strong>Zeus</strong></a>. 
+        		He is named after a <em>Greek god</em>. 
 		</p>
 		<a href="https://www.britannica.com/topic/Zeus">
 			<img width=200 src="images/zeus.jpg">
